--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Adaptive Backgrounds</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
     <link rel="stylesheet" type="text/css" href="demo.css">
     <link rel="shortcut icon" href="./favicon.ico">
@@ -13,10 +13,8 @@
   <body ng-app="demo">
     <header>
       <h1>Angular Adaptive Backgrounds</h1>
-      <h2>Surround a picture with its dominant color using a simple directive</h2>
-      <div>
-        <a class="button" href="http://github.com/brandly/angular-adaptive-backgrounds">View on GitHub</a>
-      </div>
+      <h2>Frame an image with its dominant color using a simple directive</h2>
+      <a class="button" href="http://github.com/brandly/angular-adaptive-backgrounds">View on GitHub</a>
     </header>
 
     <div class="wrapper">
