--- a/demo/index.html
+++ b/demo/index.html
@@ -19,18 +19,22 @@
 
     <div class="wrapper">
       <img src="mountains.jpg" adaptive-background>
+      <div class="ornament"></div>
     </div>
 
     <div class="wrapper">
       <img src="vespa.jpg" adaptive-background>
+      <div class="ornament"></div>
     </div>
 
     <div class="wrapper">
       <img src="bear.jpg" adaptive-background>
+      <div class="ornament"></div>
     </div>
 
     <div class="wrapper">
       <img src="pink-flowers.jpg" adaptive-background>
+      <div class="ornament"></div>
     </div>
 
     <footer>
