--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <h1>Angular Adaptive Backgrounds</h1>
       <h2>Frame an image with its dominant color using a simple directive</h2>
       <a class="button" href="http://github.com/brandly/angular-adaptive-backgrounds">View on GitHub</a>
+      <div class="ornament"></div>
     </header>
 
     <div class="wrapper">
@@ -38,7 +39,7 @@
     </div>
 
     <footer>
-      <p>Made by <a href="http://github.com/brandly">Matthew Brandly</a></p>
+      <p>Made by <a href="http://brandly.me">Matthew Brandly</a></p>
       <p>Photos from <a href="http://www.pexels.com/">Pexels</a></p>
       <div class="gh-star">
         <iframe src="http://ghbtns.com/github-btn.html?user=brandly&repo=angular-adaptive-backgrounds&type=watch&size=large"
