--- a/demo/index.html
+++ b/demo/index.html
@@ -18,23 +18,23 @@
       <div class="ornament"></div>
     </header>
 
-    <div class="wrapper">
-      <img src="mountains.jpg" adaptive-background>
+    <div class="wrapper" adaptive-background>
+      <img src="mountains.jpg">
       <div class="ornament"></div>
     </div>
 
-    <div class="wrapper">
-      <img src="vespa.jpg" adaptive-background>
+    <div class="wrapper" adaptive-background>
+      <img src="vespa.jpg">
       <div class="ornament"></div>
     </div>
 
-    <div class="wrapper">
-      <img src="bear.jpg" adaptive-background>
+    <div class="wrapper" adaptive-background>
+      <img src="bear.jpg">
       <div class="ornament"></div>
     </div>
 
-    <div class="wrapper">
-      <img src="pink-flowers.jpg" adaptive-background>
+    <div class="wrapper" adaptive-background>
+      <img src="pink-flowers.jpg">
       <div class="ornament"></div>
     </div>
 
