--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Adaptive Backgrounds</title>
+    <title>Angular Adaptive Backgrounds</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
@@ -18,23 +18,23 @@
       <div class="ornament"></div>
     </header>
 
-    <div class="wrapper">
-      <img src="mountains.jpg" adaptive-background>
+    <div class="wrapper" adaptive-background>
+      <img src="mountains.jpg">
       <div class="ornament"></div>
     </div>
 
-    <div class="wrapper">
-      <img src="vespa.jpg" adaptive-background>
+    <div class="wrapper" adaptive-background>
+      <img src="vespa.jpg">
       <div class="ornament"></div>
     </div>
 
-    <div class="wrapper">
-      <img src="bear.jpg" adaptive-background>
+    <div class="wrapper" adaptive-background>
+      <img src="bear.jpg">
       <div class="ornament"></div>
     </div>
 
-    <div class="wrapper">
-      <img src="pink-flowers.jpg" adaptive-background>
+    <div class="wrapper" adaptive-background>
+      <img src="pink-flowers.jpg">
       <div class="ornament"></div>
     </div>
 
